# Opportunity-Flower

./: README.md  pyproject.toml  torchflow_env.yml
opportunity_tcn/: __init__.py  client_app.py  dataset.py  server_app.py  task.py
