[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opportunity-tcn"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.flwr.app]
publisher = "nextsort"

[tool.flwr.app.components]
serverapp = "opportunity_tcn.server_app:app"
clientapp = "opportunity_tcn.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1
num-supernodes = 4
mode = "classification"
num_classes = 18

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4

